--- a/src/cmsis/Makefile
+++ b/src/cmsis/Makefile
@@ -13,12 +13,12 @@ SRC_C = src/st/system_stm32fxxx.c
 SRC_C  += $(wildcard src/dsp/CommonTables/*.c)
 SRC_C  += $(wildcard src/dsp/FastMathFunctions/*.c)
 SRC_C  += $(wildcard src/dsp/MatrixFunctions/*.c)
-SRC_C  += $(wildcard src/nn/ActivationFunctions/*.c)
-SRC_C  += $(wildcard src/nn/ConvolutionFunctions/*.c)
-SRC_C  += $(wildcard src/nn/FullyConnectedFunctions/*.c)
-SRC_C  += $(wildcard src/nn/NNSupportFunctions/*.c)
-SRC_C  += $(wildcard src/nn/PoolingFunctions/*.c)
-SRC_C  += $(wildcard src/nn/SoftmaxFunctions/*.c)
+#SRC_C  += $(wildcard src/nn/ActivationFunctions/*.c)
+#SRC_C  += $(wildcard src/nn/ConvolutionFunctions/*.c)
+#SRC_C  += $(wildcard src/nn/FullyConnectedFunctions/*.c)
+#SRC_C  += $(wildcard src/nn/NNSupportFunctions/*.c)
+#SRC_C  += $(wildcard src/nn/PoolingFunctions/*.c)
+#SRC_C  += $(wildcard src/nn/SoftmaxFunctions/*.c)
 
 #SRC_C  += $(wildcard src/dsp/ComplexMathFunctions/*.c)
 #SRC_C  += $(wildcard src/dsp/ControllerFunctions/*.c)
